@@ -74,8 +74,8 @@
             <p><span class="bold"><strong><span class="application">OmegaT</span> </strong></span> is Copyright © 2000-2013 Keith Godfrey, Zoltan Bartko, Volker Berlin, Didier Briel, Kim Bruning, Alex Buloichik, Thomas Cordonnier,
                Sandra Jean Chua, Enrique Estévez Fernández, Martin Fleurke, Wildrich Fourie, Phillip Hall, Jean-Christophe Helary, Thomas
                Huriaux, Hans-Peter Jacobs, Kyle Katarn, Piotr Kulik, Ibai Lakunza Velasco, Guido Leenders, Aaron Madlon-Kay, Fabián Mandelbaum,
-               Manfred Martin, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpré, Tiago Saboga, Andrzej Sawuła, Benjamin
-               Siband, Yu Tang, Rashid Umarov, Antonio Vilei, Martin Wunderlich en Michael Zakharov.
+               Manfred Martin, Adiel Mittmann, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpré, Tiago Saboga, Andrzej
+               Sawuła, Benjamin Siband, Yu Tang, Rashid Umarov, Antonio Vilei, Martin Wunderlich en Michael Zakharov.
             </p>
             <p><span class="bold"><strong>Distributie en aanpassingen</strong></span></p>
             <p><span class="bold"><strong>OmegaT </strong></span> is vrije software; u mag het verder verspreiden en/of aanpassen onder de bepalingen van de GNU General Public License zoals
