@@ -202,7 +202,7 @@ TF_MENU_EDIT_CREATE_GLOSSARY_ENTRY=Item voor &woordenlijst maken
 
 TF_MENU_EDIT_COMPARE=Overeenkomst sele&cteren
 TF_MENU_EDIT_COMPARE_NEXT=Volge&nde overeenkomst selecteren
-TF_MENU_EDIT_COMPARE_PREV=Vori&ge overeenkomst select
+TF_MENU_EDIT_COMPARE_PREV=Vori&ge overeenkomst selecteren
 TF_MENU_EDIT_COMPARE_1=Overeenkomst #&1 selecteren
 
 TF_MENU_EDIT_COMPARE_2=Overeenkomst #&2 selecteren
@@ -232,7 +232,7 @@ TF_MENU_GOTO_FORWARD_IN_HISTORY=&Verder in geschiedenis
 
 TF_MENU_GOTO_BACK_IN_HISTORY=&Terug in geschiedenis
 
-TF_MENU_GOTO_SELECTED_MATCH_SOURCE=Bron van geselecteerde &overeenkomst
+TF_MENU_GOTO_SELECTED_MATCH_SOURCE=Bron van geselecteerde &Overeenkomst
 
 
 TF_MENU_TOOLS=&Extra
@@ -275,7 +275,7 @@ MW_OPTIONSMENU_SENTSEG=&Segmentatie...
 TF_OPTIONSMENU_MACHINETRANSLATE=Mac&hinevertaling
 
 TF_OPTIONSMENU_GLOSSARY=&Woordenlijst
-TF_OPTIONSMENU_GLOSSARY_TBX_DISPLAY_CONTEXT=&Beschrijving context voor TBX woordenlijsten weergeven
+TF_OPTIONSMENU_GLOSSARY_TBX_DISPLAY_CONTEXT=&Toon contextbeschrijving voor TBX-woordenlijsten
 
 TF_OPTIONSMENU_TRANSTIPS=Tra&nsTips
 
@@ -341,10 +341,10 @@ MW_PROGRESS_DEFAULT=\ --/-- (--/--, --)
 MW_PROGRESS_DEFAULT_PERCENTAGE=\ --% (-- resterend) / --% (-- resterend), -- 
 
 MW_PROGRESS_TOOLTIP=Bestand: vertaald / aantal segmenten (project: unieke vertaalde / unieke, totaal aantal segmenten)
-MW_PROGRESS_TOOLTIP_PERCENTAGE=Bestand: unieke vertaalde % (unieke resterend) / project: unieke vertaalde % (unieke resterend), totaal aantal segmenten
+MW_PROGRESS_TOOLTIP_PERCENTAGE=Bestand: unieke vertaalde % (unieke resterend) / project: unieke vertaald % (unieke resterend), totaal aantal segmenten
 MW_PROGRESS_LEFT_LABEL=\ resterend
 
-
+MW_JUMPING_LAST_ENTRY=Naar laatst bewerkte segment springen...
 
 # NOTE: segment start is assumed to end with "0000" string to overwrite
 # with entry number.  If zeros not detected, entry number will not be
@@ -716,7 +716,7 @@ SW_CHANGED_BEFORE=Gewijzigd &v\u00f3\u00f3r:
 
 SW_CASE_SENSITIVE=&Hoofd-/kleine letters
 
-SW_SEARCH_SPACE_MATCH_NBSP=Spaties komen overeen met &nbsp
+SW_SEARCH_SPACE_MATCH_NBSP=Spatie komt overeen met &nbsp
 
 SW_SEARCH_IN_BOX=Zoeken in
 SW_SEARCH_IN_MEMORY=Ge&heugen
@@ -964,7 +964,7 @@ LATEXFILTER_FILTER_NAME=LaTeX
 POFILTER_FILTER_NAME=PO
 POFILTER_OPTIONS_TITLE=PO filteropties
 POFILTER_ALLOW_BLANK=Bl&anco vertalingen in doelbestanden toestaan
-POFILTER_ALLOW_BLANK_SEGMENT=Vertalen &blanco bronsegmenten toestaan
+POFILTER_ALLOW_BLANK_SEGMENT=Toestaan vertalen &blanco bronsegmenten
 POFILTER_SKIP_HEADER=&PO-koptekst overslaan
 POFILTER_AUTO_FILL_IN_PLURAL_STATEMENT=Automatisch vervangen van 'nplurals=INTEGER; &plural=EXPRESSION;' in koptekst
 POFILTER_FORMAT_LABEL=Indeling:
@@ -990,7 +990,7 @@ MOZDTD_FILTER_EXCEPTION=Het Mozilla DTD-filter genereerde een uitzondering:
 # MozillaLangFilter.java
 
 MOZLANG_FILTER_NAME=Mozilla Lang
-LANGFILTER_LOCALIZATION_NOTE=---- Opmerkingen vertaling ----
+LANGFILTER_LOCALIZATION_NOTE=---- Opmerkingen voor vertalingen ----
 
 # XtagFilter.java
 XTAGFILTER_FILTER_NAME=QuarkXPress CopyFlow Gold
@@ -1101,10 +1101,10 @@ XLIFF_OPTIONS_TITLE=XLIFF-filteropties
 XLIFF_OPTIONS_LABEL=Specificeer gedrag voor behandeling van tags 
 XLIFF_OPTIONS_26=&Compatibiliteit met OmegaT 2.6
 XLIFF_OPTIONS_ID=Identificatie gebruikt voor alternatieve vertalingen
-XLIFF_OPTIONS_ID_NEXT_PREV=Eerdere en &volgende alinea's
+XLIFF_OPTIONS_ID_NEXT_PREV=Vorige en &volgende alinea's
 XLIFF_OPTIONS_ID_TRANS_UNIT=<trans-unit> I&D
-XLIFF_OPTIONS_RESNAME_TRANS_UNIT=<trans-unit> attribuut &resname indien beschikbaar
-XLIFF_OPTIONS_RESNAME_EXPLANATION=Indien niet beschikbaar zal op de ID worden teruggevallen
+XLIFF_OPTIONS_RESNAME_TRANS_UNIT=<trans-unit> &resname-attribuut indien beschikbaar
+XLIFF_OPTIONS_RESNAME_EXPLANATION=Indien niet beschikbaar zal de ID worden gebruikt om op terug te vallen
 XLIFF_OPTIONS_36_ONLY=De volgende opties zijn alleen van toepassing op het filter van 3.x
 XLIFF_OPTIONS_FORCE2F=&Forceeer sneltoets "f" voor <zijn positie="end"> tags
 XLIFF_OPTIONS_IGNORE4PH=&Negeer attributen type en ctype bij het bouwen van sneltoetsen voor tag <ph>
@@ -1150,7 +1150,7 @@ ABOUTDIALOG_TITLE=Over OmegaT
 ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2014 Keith Godfrey, Maxym Mykhalchuk en anderen
 
 ABOUTDIALOG_LICENSE_BUTTON=&Licentie
-ABOUTDIALOG_CONTRIBUTORS=OmegaT is een vrij en open source multiplatform Computer Assisted Translation-programma met fuzzy overeenkomsten, vertaalgeheugen, zoeken op sleutelwoorden, woordenlijsten en vertalinguitbreiding in bijgewerkte projecten.\n\nOmegaT is van origine het werk van Keith Godfrey.\nDidier Briel is de projectmanager voor OmegaT.\n\nCode is bijgedragen door: \nZoltan Bartko, Volker Berlin, Didier Briel, Kim Bruning, Alex Buloichik (hoofdontwikkelaar), Thomas Cordonnier, Sandra Jean Chua, Enrique Est\u00e9vez Fern\u00e1ndez, Martin Fleurke, Wildrich Fourie, Phillip Hall, Jean-Christophe Helary, Thomas Huriaux, Hans-Peter Jacobs, Kyle Katarn, Piotr Kulik, Ibai Lakunza Velasco, Guido Leenders, Aaron Madlon-Kay, Fabi\u00e1n Mandelbaum, Manfred Martin, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Yu Tang, Rashid Umarov, Antonio Vilei, Martin Wunderlich en Michael Zakharov\n\nAndere bijdragen worden gedetailleerd vermeld in het bestand leesmij.txt\n\nOmegaT gebruikt de volgende bibliotheken:\n  HTMLParser 1.6 van Somik Raha, Derrick Oswald en anderen (LGPL License)\n  VLDocking Framework 3.0.4 (LGPL License)\n  Hunspell van L\u00e1szl\u00f3 N\u00e9meth en anderen (LGPL License)\n  JNA van Todd Fast, Timothy Wall en anderen (LGPL License)\n  Swing-Layout 1.0.4 (LGPL License)\n  Jmyspell 2.1.4 (LGPL License)\n  SVNKit 1.8.5 (TMate License)\n  Sequence Library (Sequence Library License)\n  ANTLR 3.4 (ANTLR 3 License)\n  SQLJet 1.1.10 (GPL-licentie)\n  JGit (Eclipse Distribution License)\n  JSch (JSch License)\n  Base64 (publieke domein)\n  Diff (GPL)\n  trilead-ssh2-1.0.0-build217 (Trilead SSH-licentie)\n  Lucene (Apache License 2.0)\n  TinySegmenter (publieke domein)\n  commons-*.jar (Apache License 2.0)\n  jwordsplitter-3.4.jar (Apache License 2.0)\n  LanguageTool.jar (LGPL licentie)\n  morfologik-*.jar (Morfologik licentie)\n  segment-1.4.1.jar (Segment licentie)\n  lucene-gosen-2.0.2-ipadic.jar (LGPL License)\n  pdfbox-app-1.8.1.jar (Apache License 2.0)\n  KoreanAnalyzer-3x-120223.jar (Apache License 2.0)\n  SuperTMXMerge-for_OmegaT.jar (LGPL License)\n  groovy-all-2.2.2.jar (Apache License 2.0)\n  slf4j-*.jar (MIT License)
+ABOUTDIALOG_CONTRIBUTORS=OmegaT is een vrij en open source multiplatform Computer Assisted Translation-programma met fuzzy overeenkomsten, vertaalgeheugen, zoeken op sleutelwoorden, woordenlijsten en vertalinguitbreiding in bijgewerkte projecten.\n\nOmegaT is van origine het werk van Keith Godfrey.\nDidier Briel is de projectmanager van OmegaT.\n\nCode is bijgedragen door: \nZoltan Bartko, Volker Berlin, Didier Briel, Kim Bruning, Alex Buloichik (hoofdontwikkelaar), Thomas Cordonnier, Sandra Jean Chua, Enrique Est\u00e9vez Fern\u00e1ndez, Martin Fleurke, Wildrich Fourie, Phillip Hall, Jean-Christophe Helary, Thomas Huriaux, Hans-Peter Jacobs, Kyle Katarn, Piotr Kulik, Ibai Lakunza Velasco, Guido Leenders, Aaron Madlon-Kay, Fabi\u00e1n Mandelbaum, Manfred Martin, Adiel Mittmann, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Yu Tang, Rashid Umarov, Antonio Vilei, Martin Wunderlich en Michael Zakharov\n\nAndere bijdragen worden gedetailleerd vermeld in het bestand leesmij.txt\n\nOmegaT gebruikt de volgende bibliotheken:\n  HTMLParser 1.6 van Somik Raha, Derrick Oswald en anderen (LGPL License)\n  VLDocking Framework 3.0.4 (LGPL License)\n  Hunspell van L\u00e1szl\u00f3 N\u00e9meth en anderen (LGPL License)\n  JNA van Todd Fast, Timothy Wall en anderen (LGPL License)\n  Swing-Layout 1.0.4 (LGPL License)\n  Jmyspell 2.1.4 (LGPL License)\n  SVNKit 1.8.5 (TMate License)\n  Sequence Library (Sequence Library License)\n  ANTLR 3.4 (ANTLR 3 licentie)\n  SQLJet 1.1.10 (GPL-licentie)\n  JGit (Eclipse Distribution License)\n  JSch (JSch License)\n  Base64 (publieke domein)\n  Diff (GPL)\n  trilead-ssh2-1.0.0-build217 (Trilead SSH-licentie)\n  Lucene (Apache License 2.0)\n  TinySegmenter (publieke domein)\n  commons-*.jar (Apache License 2.0)\n  jwordsplitter-3.4.jar (Apache License 2.0)\n  LanguageTool.jar (LGPL licentie)\n  morfologik-*.jar (Morfologik licentie)\n  segment-1.4.1.jar (Segment licentie)\n  lucene-gosen-2.0.2-ipadic.jar (LGPL License)\n  pdfbox-app-1.8.1.jar (Apache License 2.0)\n  KoreanAnalyzer-3x-120223.jar (Apache License 2.0)\n  SuperTMXMerge-for_OmegaT.jar (LGPL License)\n  groovy-all-2.2.2.jar (Apache License 2.0)\n  slf4j-*.jar (MIT License)
 
 # LicenseDialog.java
 
@@ -1198,7 +1198,7 @@ FILTERSCUSTOMIZER_BUTTON_OPTIONS=O&pties...
 FILTERSCUSTOMIZER_OPTION_GLOBAL_REMOVE_TAGS=Verwijder voor- en achterliggende tags
 FILTERSCUSTOMIZER_OPTION_GLOBAL_REMOVE_SPACES_NONSEG=Verwijder voor- en achterliggende witruimte in niet-gesegmenteerde projecten
 FILTERSCUSTOMIZER_OPTION_GLOBAL_PRESERVE_SPACES=Spaties voor alle tags behouden
-FILTERSCUSTOMIZER_OPTION_GLOBAL_IGNORE_FILE=Bestandscontext bij identificeren van segmenten met wisselende vertalingen negeren
+FILTERSCUSTOMIZER_OPTION_GLOBAL_IGNORE_FILE=Negeer context van bestand bij identificeren van segmenten met wisselende vertalingen
 
 # InstanceEditor.java
 
@@ -1383,6 +1383,12 @@ EXT_TMX_SORT_KEY_ADJUSTED_SCORE=Volledige tekst, inclusief tags en getallen
 VIEW_OPTION_TITLE=Weergaveopties
 VIEW_OPTION_SOURCE=Alle &bronsegmenten VET weergeven
 VIEW_OPTION_UNIQUE=Inclusief het eerste niet-&unieke segment bij het markeren van niet-unieke segmenten
+VIEW_OPTION_PPT_STRIP=Gepaarde tags uit beschermd gedeelte helptip verwijderen
+VIEW_OPTION_PPT_BOLD=Tekst in beschermd gedeelte helptip vet weergeven
+MOD_INFO_TEMPLATE=Sjabloon voor info over wijzigingen
+MOD_INFO_TEMPLATE_NO_DATE=Sjabloon voor info over wijzigingen voor segmenten zonder datum
+MOD_INFO_TEMPLATE_ACTIVATOR=Aangepaste sjablonen voor info over wijzigingen gebruiken
+MOD_INFO_TEMPLATE_VARIABLES=Sjabloon variabelen:
 
 # org.omegat.gui.dialogs.CreateGlossaryEntry.java
 CREATE_GLOSSARY_TITLE=Item voor woordenlijst maken
@@ -1784,11 +1790,11 @@ TEAM_CANCELLED=Maken van nieuw teamproject geannuleerd
 TEAM_CREDENTIALS_DENIED=Gebruiker weigerde de toegangsgegevens
 TEAM_MISSING_FOLDER=De projectmap {0} ontbreekt en kon niet worden gemaakt.
 TEAM_ERROR_SAVE_CREDENTIALS=Kon de toegangsgegevens niet opslaan naar tekstbestand
-TEAM_DETECTING_REPO=Detecteren...
-TEAM_ERROR_DETECTING_REPO=Een fout trad op bij het proberen te detecteren van het type opslag.
-TEAM_DETECTED_REPO_GIT=Dit is een opslagplaats voor Git.
-TEAM_DETECTED_REPO_SVN=Dit is een opslagplaats voor Subversion.
-TEAM_DETECTED_REPO_UNKNOWN=Deze URL lijkt ongeldig te zijn. Controleer hem nog eens.
+TEAM_DETECTING_REPO=Herkennen...
+TEAM_ERROR_DETECTING_REPO=Er trad een fout op bij het proberen te herkennen van het type repo.
+TEAM_DETECTED_REPO_GIT=Dit is een Git-repository.
+TEAM_DETECTED_REPO_SVN=Dit is een Subversion-repository.
+TEAM_DETECTED_REPO_UNKNOWN=Deze URL lijkt ongeldig te zijn. Controleer hem.
 
 # Save options
 SAVE_DIALOG_TITLE=Opties voor Opslaan en uitvoer
@@ -1908,29 +1914,29 @@ STM_METADATA_NEXT=Volgende
 STM_METADATA_PREV=Vorige
 
 # TaaS messages
-TAAS_REQUEST=Verzoek naar TaaS: {0}
+TAAS_REQUEST=Aanvraag voor TaaS: {0}
 TAAS_MENU_BROWSE=&Bladeren door TaaS Collections...
-TAAS_MENU_DOMAINS=&Selecteren TaaS Terminology Lookup Domain...
+TAAS_MENU_DOMAINS=&Selecteer TaaS Terminology Lookup Domain...
 TAAS_MENU_LOOKUP=&TaaS Terminology Lookup
 TAAS_LIST_HEADER=TaaS Collections
 TAAS_LIST_NAME=Naam
 TAAS_LIST_DESC=Beschrijving
-TAAS_LIST_SOURCE_COUNT=Bron tellen
-TAAS_LIST_TARGET_COUNT=Doel tellen
+TAAS_LIST_SOURCE_COUNT=Tellen bron
+TAAS_LIST_TARGET_COUNT=Tellen doel
 TAAS_LIST_DOMAINS=Domeinen
-TAAS_LIST_UPDATED=Bijgewerkte
+TAAS_LIST_UPDATED=Bijgewerkt
 TAAS_LIST_DOWNLOAD=&Downloaden
 TAAS_DOMAINS_ALL=Alle domeinen
 TAAS_DOMAINS_SELECT=&Selecteren
-TAAS_STATUS_LIST=Lijst collectie ophalen...
-TAAS_DOMAIN_SELECTION_TITLE=TaaS domein selecteren
-TAAS_STATUS_DOMAIN_LIST=Lijst domein ophalen...
-TAAS_STATUS_DOWNLOAD=Collectie downloaden {0}
-TAAS_GENERAL_ERROR=Fout in verzoek: {0}
-TAAS_UNAUTHORIZED_ERROR=Niet-geautoriseerd verzoek naar service van TaaS
+TAAS_STATUS_LIST=Haal lijst van collectie op...
+TAAS_DOMAIN_SELECTION_TITLE=Selecteer domein van TaaS
+TAAS_STATUS_DOMAIN_LIST=Haal lijst van domein op...
+TAAS_STATUS_DOWNLOAD=Download collectie {0}
+TAAS_GENERAL_ERROR=Fout in aanvraag: {0}
+TAAS_UNAUTHORIZED_ERROR=Niet-geautoriseerde aanvragen voor service van TaaS
 TAAS_FORMAT_ERROR=Verkeerde indeling antwoord van service van TaaS
-TAAS_REPLACE_ERROR=Fout bij bijwerken woordenboekbestand
-TAAS_API_KEY_NOT_FOUND=TaaS API-sleutel niet gevonden. Ga naar https://demo.taas-project.eu/account/keys/create?system=omegaT om uw eigen sleutel te maken en geef die dan door aan OmegaT met -Dtaas.user.key=xxxxx
+TAAS_REPLACE_ERROR=Fout bij bijwerken bestand woordenlijst
+TAAS_API_KEY_NOT_FOUND=TaaS API-sleutel niet gevonden. Ga naar https://demo.taas-project.eu/account/keys/create?system=omegaT om uw eigen sleutel te genereren en dan te vermelden in OmegaT met -Dtaas.user.key=xxxxx
 TAAS_DOMAIN_SELECT=&Selecteren
 
 # Filename patterns editor dialog
